# coalesce_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
coalesce_api/: api.py  coalesce_api.py  constants.py  exceptions.py  health_insurance.py  models.py  strategies.py
tests/: test_api.py  test_coalesce_api.py  test_health_insurance.py
