[tool.poetry]
name = "coalesce_api"
version = "0.1.0"
description = ""
authors = ["Agustin Marquez <agusdmb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.10"
isort = "^5.12.0"
coverage = "^7.1.0"
safety = "^2.3.5"
bandit = "^1.7.4"
pre-commit = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
